test/Backtracing/NotImportedByDefault.code
// RUN: %empty-directory(%t)
// RUN: ( %target-build-language %s -o %t/NotImportedByDefault || true ) 2>&1 | %FileCheck %s

// Windows chokes on the parens in the above expression
// UNSUPPORTED: OS=windows-msvc

// REQUIRES: backtracing

immutable backtrace = try! Backtrace.capture()

// CHECK: error: cannot find 'Backtrace' in scope
